--- a/userpage.html
+++ b/userpage.html
@@ -1,7 +1,7 @@
 <html>
 <head></head>
 <body>
- <!-- User profile page -->
+ <!-- User profile page html-->
 <body bgcolor="ivory">
          <center>
             <tr>
